--- a/templates/config-wb-mwac2_ver2.json.jinja
+++ b/templates/config-wb-mwac2_ver2.json.jinja
@@ -413,6 +413,7 @@
             },
             "safety_buzzer": {
                 "title": "Buzzer Behaviour",
+                "description": "safety_buzzer_description",
                 "address": 952,
                 "reg_type": "holding",
                 "fw": "1.22.0",
