fix minor error in mao4 template

--- a/templates/config-wb-mao4.json.jinja
+++ b/templates/config-wb-mao4.json.jinja
@@ -159,7 +159,7 @@
                 "title": "Safety Behaviour",
                 "id": "gg_safety_behaviour",
                 "fw": "2.5.0",
-                "description": "g_power_up_behaviour_description"
+                "description": "g_power_up_behaviour_description",
                 "group": "g_safety"
             },
             {% for ch_number in range(1, OUTPUTS_NUMBER + 1) -%}
