--- a/templates/config-wb-mao4.json.jinja
+++ b/templates/config-wb-mao4.json.jinja
@@ -147,7 +147,7 @@
             {
                 "title": "Safety Mode",
                 "id": "g_safety",
-                "description": "g_safety_description"
+                "description": "g_safety_description",
                 "fw": "2.5.0"
             },
             {
