--- a/templates/config-wb-mr6cu.json.jinja
+++ b/templates/config-wb-mr6cu.json.jinja
@@ -52,18 +52,21 @@
             {
                 "title": "Curtains Control",
                 "description": "curtains_control_description",
+                "fw": "1.21.0",
                 "id": "g_curtains_control"
             },
             {% for curtain_num in range(1, CURTAINS_NUMBER + 1) -%}
             {
                 "title": "Curtain {{curtain_num}}",
                 "id": "gg_curtain_{{curtain_num}}",
+                "fw": "1.21.0",
                 "group": "g_curtains_control"
             },
             {% endfor -%}
             {
                 "title": "Curtains Channels",
                 "id": "gg_curtains_channels",
+                "fw": "1.21.0",
                 "group": "g_curtains_control",
                 "ui_options": {
                     "wb": {
@@ -358,7 +361,7 @@
 
                 "poll_timeout_description": "Time in seconds without modbus polling before activation safety mode. Actions in safety mode are configured using appropriate parameters",
 
-                "curtains_control_description": "For using curtain mode firmware v1.21.0 or newer is required. For setup buttons actions select \"Operate according to button mapping-matrix\" mode and configure actions for buttons"
+                "curtains_control_description": "For setup buttons actions select \"Operate according to button mapping-matrix\" mode and configure actions for buttons"
             },
             "ru": {
                 "WB-MR6CU_template_title": "WB-MR6CU v.2, WB-MRPS6 (6-канальный модуль реле)",
@@ -405,7 +408,7 @@
                 "Use output {{curtain_num * 2 - 1}} for open, output {{curtain_num * 2}} for close": "Да, использовать выход {{curtain_num * 2 - 1}} для открытия, выход {{curtain_num * 2}} для закрытия",
                 {% endfor -%}
 
-                "curtains_control_description": "Для использования режима штор требуется прошивка 1.21.0 или новее. Для настройки действий на нажатия выберите режим \"Управлять по mapping-матрице для кнопок\" на вкладке требуемого входа.",
+                "curtains_control_description": "Для настройки действий на нажатия выберите режим \"Управлять по mapping-матрице для кнопок\" на вкладке требуемого входа.",
 
                 "Baud rate": "Скорость обмена",
                 "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
