Feature/inf 142 set compatible firmwares in templates 2 (#1026)
* edit map12e template

* edit wb-led template

* edit wb-mdm3 template

* edit wb-mwac template

* edit wb-mao4 template

* edit wb-mr3 template

* edit wb-mr6cv3 template

* edit wb-mrm2-mini template

* edit wb-mrwm2 template

* edit wb-mwac2_ver2 template

* fix error in wb-led template

* fix error in wb-mao4 template

* bump version

* correct the comments

* fix minor error in mao4 template

* fix one more error in mao4 template

---------

Co-authored-by: Alexander Getman <alexander.getman@wirenboard.com>

--- a/templates/config-wb-mr3.json.jinja
+++ b/templates/config-wb-mr3.json.jinja
@@ -100,6 +100,7 @@
             },
             {
                 "title": "Curtains Control",
+                "fw": "1.21.0",
                 "description": "curtains_control_description",
                 "id": "g_curtains_control"
             },
@@ -332,6 +333,7 @@
                 "order": 1,
                 "address": {{1400 + curtain_num - 1 + mm_row_offset * CURTAINS_MMATRIX_OUTPUTS_NUMBER}},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "default": 0,
                 "enum": [0, 1, 2, 3, 4],
                 "enum_titles": ["no action", "open", "close", "open/close", "stop"],
@@ -343,6 +345,7 @@
                 "order": 2,
                 "address": {{1432 + curtain_num - 1 + mm_row_offset * CURTAINS_MMATRIX_OUTPUTS_NUMBER}},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "default": 0,
                 "enum": [0, 1, 2, 3, 4, 5, 6, 7],
                 "enum_titles": ["no action", "open", "close", "open/close", "stop", "opening while pressed", "closing while pressed", "opening/closing while pressed"],
@@ -354,6 +357,7 @@
                 "order": 3,
                 "address": {{1464 + curtain_num - 1 + mm_row_offset * CURTAINS_MMATRIX_OUTPUTS_NUMBER}},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "default": 0,
                 "enum": [0, 1, 2, 3, 4],
                 "enum_titles": ["no action", "open", "close", "open/close", "stop"],
@@ -365,6 +369,7 @@
                 "order": 4,
                 "address": {{1496 + curtain_num - 1 + mm_row_offset * CURTAINS_MMATRIX_OUTPUTS_NUMBER}},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "default": 0,
                 "enum": [0, 1, 2, 3, 4, 5, 6, 7],
                 "enum_titles": ["no action", "open", "close", "open/close", "stop", "opening while pressed", "closing while pressed", "opening/closing while pressed"],
@@ -452,6 +457,7 @@
                 "group": "gg_curtain_{{curtain_num}}",
                 "address": {{ 1280 + curtain_num - 1 }},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "default": 0,
                 "enum": [0, 1],
                 "enum_titles": [
@@ -465,6 +471,7 @@
                 "group": "gg_curtain_{{curtain_num}}",
                 "address": {{ 1328 + curtain_num - 1 }},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "scale": 0.1,
                 "default": 10.0,
                 "min": 1.0,
@@ -477,6 +484,7 @@
                 "group": "gg_curtain_{{curtain_num}}",
                 "address": {{ 1332 + curtain_num - 1 }},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "scale": 0.1,
                 "default": 10.0,
                 "min": 1.0,
@@ -489,6 +497,7 @@
                 "group": "gg_curtain_{{curtain_num}}",
                 "address": {{ 1336 + curtain_num - 1 }},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "default": 500,
                 "min": 50,
                 "max": 10000,
@@ -500,6 +509,7 @@
                 "group": "gg_curtain_{{curtain_num}}",
                 "address": {{1288 + curtain_num - 1}},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "default": 0,
                 "enum": [0, 1, 2],
                 "enum_titles": [
@@ -515,6 +525,7 @@
                 "group": "gg_curtain_{{curtain_num}}",
                 "address": {{1284 + curtain_num - 1}},
                 "reg_type": "holding",
+                "fw": "1.21.0",
                 "default": 0,
                 "enum": [0, 1, 2],
                 "enum_titles": [
@@ -696,6 +707,7 @@
                 "reg_type": "coil",
                 "address": {{16 + (curtain_num - 1) * 2}},
                 "type": "switch",
+                "fw": "1.21.0",
                 "sporadic": true,
                 "group": "gg_curtains_channels",
                 "condition": "curtain{{curtain_num}}_mode==1"
@@ -705,6 +717,7 @@
                 "reg_type": "coil",
                 "address": {{17 + (curtain_num - 1) * 2}},
                 "type": "switch",
+                "fw": "1.21.0",
                 "sporadic": true,
                 "group": "gg_curtains_channels",
                 "condition": "curtain{{curtain_num}}_mode==1"
@@ -800,7 +813,7 @@
                 "secp_waiting_time_description": "If there is no second press during the specified time then press is single. 0 - disables all presses except short and long. Adds a delay to the response to a short press",
                 "debounce_time_description": "For press detection must be 5-10 times less than second press waiting time. Adds a delay to the response to presses. Firmware up to 1.19.0 supports maximum 250 ms",
 
-                "curtains_control_description": "For using curtain mode firmware v1.21.0 or newer is required. For setup buttons actions select \"Operate according to button mapping-matrix\" mode and configure actions for buttons"
+                "curtains_control_description": "For setup buttons actions select \"Operate according to button mapping-matrix\" mode and configure actions for buttons"
             },
             "ru": {
                 "WB-MR3_template_title": "WB-MR3LV/x, WB-MR3HV/x, WB-MRWL3  (3-канальный модуль реле)",
@@ -921,7 +934,7 @@
                 "Use output {{curtain_num * 2 - 1}} for open, output {{curtain_num * 2}} for close": "Да, использовать выход {{curtain_num * 2 - 1}} для открытия, выход {{curtain_num * 2}} для закрытия",
                 {% endfor -%}
 
-                "curtains_control_description": "Для использования режима штор требуется прошивка 1.21.0 или новее. Для настройки действий на нажатия выберите режим \"Управлять по mapping-матрице для кнопок\" на вкладке требуемого входа.",
+                "curtains_control_description": "Для настройки действий на нажатия выберите режим \"Управлять по mapping-матрице для кнопок\" на вкладке требуемого входа.",
 
                 "Baud rate": "Скорость обмена",
                 "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
