--- a/templates/config-wb-mao4.json.jinja
+++ b/templates/config-wb-mao4.json.jinja
@@ -104,21 +104,25 @@
             {
                 "title": "Light Scene {{ ls_number }}",
                 "id": "g_light_scene_{{ ls_number }}",
+                "fw": "2.5.0",
                 "description": "light_scenes_description"
             },
             {
                 "title": "Actions when Scene Light Turn On",
                 "id": "gg_ls_{{ ls_number }}_actions_turn_on",
+                "fw": "2.5.0",
                 "group": "g_light_scene_{{ ls_number }}"
             },
             {
                 "title": "Actions when Scene Light Turn Off",
                 "id": "gg_ls_{{ ls_number }}_actions_turn_off",
+                "fw": "2.5.0",
                 "group": "g_light_scene_{{ ls_number }}"
             },
             {
                 "title": "Light Scene {{ ls_number }} Channels",
                 "id": "gg_ls_{{ ls_number }}_channels",
+                "fw": "2.5.0",
                 "group": "g_light_scene_{{ ls_number }}",
                 "ui_options": {
                     "wb": {
@@ -143,33 +147,39 @@
             {
                 "title": "Safety Mode",
                 "id": "g_safety",
-                "description": "g_safety_description"
+                "description": "g_safety_description",
+                "fw": "2.5.0"
             },
             {
                 "title": "Power Up Behaviour",
                 "id": "g_power_up_behaviour",
-                "description": "g_power_up_behaviour_description"
+                "fw": "2.5.0"
             },
             {
                 "title": "Safety Behaviour",
                 "id": "gg_safety_behaviour",
+                "fw": "2.5.0",
+                "description": "g_power_up_behaviour_description",
                 "group": "g_safety"
             },
             {% for ch_number in range(1, OUTPUTS_NUMBER + 1) -%}
             {
                 "title": "Channel {{ ch_number }} Switch",
                 "id": "gg_safety_mode_ch_{{ ch_number }}",
+                "fw": "2.5.0",
                 "group": "gg_safety_behaviour"
             },
             {
                 "title": "Channel {{ ch_number }} Switch",
                 "id": "gg_power_up_behaviour_ch_{{ ch_number }}",
+                "fw": "2.5.0",
                 "group": "g_power_up_behaviour"
             },
             {% endfor -%}
             {
                 "title": "Inputs Control In Safety Mode",
                 "id": "gg_safety_input_control",
+                "fw": "2.5.0",
                 "description": "inputs_control_in_safety_mode_description",
                 "group": "g_safety"
             },
@@ -280,9 +290,9 @@
             {
                 "id": "input_{{ch_number + 1}}_mode",
                 "title": "Input Mode",
-                "description": "input_mode_description",
                 "address": {{416 + ch_number}},
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "enum": [0, 1],
                 "enum_titles": [
                     "Button",
@@ -411,6 +421,7 @@
                 "title": "Output Number",
                 "address": {{704 + (loop.index0 * 16) + ch_number}},
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "enum": [0, 1, 2, 3, 4, 100, {%for ls in range(LIGHT_SCENES_NUMBER) %}{{32 + ls}}{% if not loop.last %}, {% endif %}{% endfor %}],
                 "enum_titles": [
                     "No Action",
@@ -433,6 +444,7 @@
                 "title": "Action",
                 "address": {{736 + (loop.index0 * 16) + ch_number}},
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "enum": [0, 1, 2],
                 "enum_titles": [
                     "Turn Off",
@@ -464,6 +476,7 @@
                 "title": "Action",
                 "address": {{736 + (loop.index0 * 16) + ch_number}},
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "enum": [0, 1, 2],
                 "enum_titles": [
                     "Turn Off Scene Light",
@@ -483,6 +496,7 @@
                 "id": "ls_{{ls_number}}_light_on_off_condition",
                 "title": "Scene Light On/Off Condition",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{1264 + (ls_number - 1)}},
                 "type": "enum",
                 "enum": [0, 1],
@@ -497,6 +511,7 @@
                 "id": "ls_{{ls_number}}_ch_{{ch_number}}_action_off",
                 "title": "Action",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{1280 + 0 + 64 * (ls_number - 1) + (ch_number - 1)}},
                 "type": "enum",
                 "enum": [0, 2, 3],
@@ -511,6 +526,7 @@
                 "id": "ls_{{ls_number}}_ch_{{ch_number}}_fading_off",
                 "title": "Dimming level rate (ms/%)",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{1280 + 8 + 64 * (ls_number - 1) + (ch_number - 1)}},
                 "min": 0,
                 "max": 500,
@@ -523,6 +539,7 @@
                 "id": "ls_{{ls_number}}_ch_{{ch_number}}_level_off",
                 "title": "Brightness (%)",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{1280 + 16 + 64 * (ls_number - 1) + (ch_number - 1)}},
                 "min": 1,
                 "max": 100,
@@ -535,6 +552,7 @@
                 "id": "ls_{{ls_number}}_ch_{{ch_number}}_action_on",
                 "title": "Action",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{1280 + 32 + 64 * (ls_number - 1) + (ch_number - 1)}},
                 "type": "enum",
                 "enum": [0, 1, 3],
@@ -549,6 +567,7 @@
                 "id": "ls_{{ls_number}}_ch_{{ch_number}}_fading_on",
                 "title": "Dimming level rate (ms/%)",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{1280 + 40 + 64 * (ls_number - 1) + (ch_number - 1)}},
                 "min": 0,
                 "max": 500,
@@ -561,6 +580,7 @@
                 "id": "ls_{{ls_number}}_ch_{{ch_number}}_level_on",
                 "title": "Brightness (%)",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{1280 + 48 + 64 * (ls_number - 1) + (ch_number - 1)}},
                 "min": 1,
                 "max": 100,
@@ -580,6 +600,7 @@
                 "address": 8,
                 "order": 2,
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "min": 1,
                 "max": 65534,
                 "default": 10
@@ -589,6 +610,7 @@
                 "id": "safety_mode_ch_{{ch_number}}_action",
                 "title": "Action",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{648 + ch_number - 1}},
                 "type": "enum",
                 "enum": [0, 1, 2, 3],
@@ -604,6 +626,7 @@
                 "id": "safety_mode_ch_{{ch_number}}_level",
                 "title": "Brightness (%)",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{656 + ch_number - 1}},
                 "min": 1,
                 "max": 100,
@@ -616,6 +639,7 @@
                 "id": "power_up_behaviour_ch_{{ch_number}}_action",
                 "title": "Action",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{664 + ch_number - 1}},
                 "type": "enum",
                 "enum": [0, 1, 2, 3],
@@ -631,6 +655,7 @@
                 "id": "power_up_behaviour_ch_{{ch_number}}_level",
                 "title": "Brightness (%)",
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "address": {{672 + ch_number - 1}},
                 "min": 1,
                 "max": 100,
@@ -647,6 +672,7 @@
                 "group": "gg_safety_input_control",
                 "address": {{640 + in_number - 1}},
                 "reg_type": "holding",
+                "fw": "2.5.0",
                 "default": 0,
                 "enum": [0, 1, 2],
                 "enum_titles": [
@@ -772,6 +798,7 @@
             {
                 "name": "Scene {{ls_number}} Light",
                 "reg_type": "coil",
+                "fw": "2.5.0",
                 "address": {{ 32 + (ls_number - 1) }},
                 "type": "switch",
                 "enabled": false,
@@ -869,9 +896,8 @@
                 "input_double_time_description": "If there is no second press during the specified time then press is single. 0 - disables all presses except short and long. Adds a delay to the response to a short press",
                 "input_debounce_time_description": "Must be 5-10 times less than second press waiting time. Adds a delay to the response to presses",
 
-                "input_mode_description": "Button is the default mode. Switch mode supported since firmware version 2.5.0",
                 "light_scenes_description": "Light scenes are used to control multiple channels simultaneously. This is necessary to define actions when the scene light is turned on or off. Supported since firmware version 2.5.0",
-                "g_safety_description": "Safety mode is activated when there is no modbus polling for the specified time. Supported since firmware version 2.5.0",
+                "g_safety_description": "Safety mode is activated when there is no modbus polling for the specified time",
 
                 "poll_timeout_description": "Time in seconds without modbus polling before activation safety mode. Actions in safety mode are configured using appropriate parameters",
                 "inputs_control_in_safety_mode_description": "Sets change of control from the inputs when module switches to safety mode"
@@ -963,7 +989,7 @@
                 {% endfor -%}
 
                 "Safety Mode": "Безопасный режим",
-                "g_safety_description": "Настройка поведения устройства в случае потери связи с контроллером. Доступно с версии прошивки 2.5.0",
+                "g_safety_description": "Настройка поведения устройства в случае потери связи с контроллером",
                 "Safety Behaviour": "Действие в безопасном режиме",
                 "Inputs Control In Safety Mode": "Управление с входов в безопасном режиме",
                 "Don't change": "Не блокировать",
@@ -974,7 +1000,7 @@
                 "inputs_control_in_safety_mode_description": "Настройка изменения управления с входов при переходе модуля в безопасный режим",
 
                 "Power Up Behaviour": "Поведение при включении питания",
-                "g_power_up_behaviour_description": "Настройка поведения выходов при включении питания устройства. Доступно с версии прошивки 2.5.0",
+                "g_power_up_behaviour_description": "Настройка поведения выходов при включении питания устройства",
                 "Set Previous State": "Установить предыдущее состояние",
 
                 "Serial": "Серийный номер",
@@ -989,7 +1015,6 @@
                 "Second Press Waiting Time (ms)": "Время ожидания второго нажатия (мс)",
                 "Debounce Time (ms)": "Время подавления дребезга (мс)",
 
-                "input_mode_description": "Режим работы входа по умолчанию - кнопка без фиксации. Работа в режиме выключателя с фиксацией доступна с версии прошивки 2.5.0",
 
                 "input_hold_time_description": "Если нажатие длится больше указанного времени - считаем его длинным",
                 "input_double_time_description": "Если за указанное время второго нажатия не было - считаем нажатие одиночным. 0 - отключит все нажатия кроме короткого и длинного. Вносит задержку в реакцию на короткое нажатие",
