WB-MAP3E(T): Add separate device signatures (#1040)

--- a/templates/config-map12e-fw2.json.jinja
+++ b/templates/config-map12e-fw2.json.jinja
@@ -1000,7 +1000,7 @@
         ],
         "translations": {
             "en": {
-                "WB-MAP12E-fw2_template_title": "WB-MAP12E fw2 (multi-channel enegry meter)",
+                "WB-MAP12E-fw2_template_title": "WB-MAP12E fw2 (multi-channel energy meter)",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "phase_loss_detection_description": "Resets voltage and power values if voltage on phase is less than 30% of maximum voltage among all phases. Firmware v2.6.3 or newer is required.",
                 "Supply voltage": "5V Supply",
@@ -1019,15 +1019,15 @@
                 {% for ch_num in range(1, 5) -%}
                 "Channel {{ch_num}} Turns L1": "Коэффициент трансформации L1",
                 "Channel {{ch_num}} Phi L1": "Фазовая задержка L1",
-                "Channel {{ch_num}} Actual Phase L1": "Фаза транформатора L1",
+                "Channel {{ch_num}} Actual Phase L1": "Фаза трансформатора L1",
                 "Channel {{ch_num}} CT Reverse L1": "Инвертировать токовый трансформатор L1",
                 "Channel {{ch_num}} Turns L2": "Коэффициент трансформации L2",
                 "Channel {{ch_num}} Phi L2": "Фазовая задержка L2",
-                "Channel {{ch_num}} Actual Phase L2": "Фаза транформатора L2",
+                "Channel {{ch_num}} Actual Phase L2": "Фаза трансформатора L2",
                 "Channel {{ch_num}} CT Reverse L2": "Инвертировать токовый трансформатор L2",
                 "Channel {{ch_num}} Turns L3": "Коэффициент трансформации L3",
                 "Channel {{ch_num}} Phi L3": "Фазовая задержка L3",
-                "Channel {{ch_num}} Actual Phase L3": "Фаза транформатора L3",
+                "Channel {{ch_num}} Actual Phase L3": "Фаза трансформатора L3",
                 "Channel {{ch_num}} CT Reverse L3": "Инвертировать токовый трансформатор L3",
                 "Ch {{ch_num}} Phase angle L1": "Кан {{ch_num}} угол U/I L1",
                 "Ch {{ch_num}} Phase angle L2": "Кан {{ch_num}} угол U/I L2",
